Accesibility Contrast fixed for text primary light.

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   --gradient: linear-gradient(60deg, var(--primary-color)  0%, var(--secondary-color) 100%);
 
   --text-primary: #1A1A1A;
-  --text-primary-light: #808080;
+  --text-primary-light: #526A7A;
 
   --text-secondary: #FAFAFA; 
 
